tests/miniJava/pos/001039_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) java [ 0 ] = 0 ; else System.out.println ( { } ) ; } }
