tests/miniJava/neg/003146_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java [ 0 System.out.println ] = 0 ; } }
